k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pg-mentat
  labels:
    app.kubernetes.io/name: pg-mentat
    app.kubernetes.io/part-of: pg-mentat
